# airflow-dbt-mvp

./: .env  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  startup.sh
api/: __init__.py  bq_loader.py  spacex_api.py
core/: base.py  config.py  load.py  pipeline.py  tasks.py
dags/: dag.py
dags/core/: config.py  dbt.py  extract.py  load.py  storage.py  transform.py  utils.py
dags/projects/spacex/: dag.py  pipeline.py  tasks.py
dags/projects/spacex/core/: config.py  extract.py  interface.py  storage.py  utils.py
dags/spacex/: config.py  dag.py  tasks.py
dags/spacex/core/: extract.py  pipeline.py  transform.py
dags/spacex/pipelines/: spacex_etl.py
dags/spacex/utils/: spacex_api.py  storage_loader.py
dbt/: dbt_project.yml
dbt/macros/: generate_schema_name.sql
dbt/models/mart/: launch_metrics.sql  schema.yml
dbt/models/mart/spacex/: mart_capsule_status_summary.sql  mart_capsules_status_summary.sql  mart_capsules_usage_stats.sql  mart_cores_reuse_stats.sql  mart_history_by_launch_year.sql  mart_launch_success_by_rocket_and_capsule.sql  mart_launch_success_by_year.sql  mart_launches_success_by_rocket_and_capsule.sql  mart_launches_success_by_year.sql  mart_launches_success_rate_by_year.sql  mart_payload_mass_by_orbit.sql  schema.yml  (+5 more)
dbt/models/raw/: spacex_launches.sql
dbt/models/staging/: schema.yml  stg_launches.sql  stg_spacex_launches.sql
dbt/profiles/: .user.yml  profiles.template.yml  profiles.yml
dbt_profiles/: .user.yml  profiles.template.yml  profiles.yml
(+10 files in other folders)
